JumpScript/tests/baselines/reference/cachedModuleResolution9.errors.txt
/a/b/c/d/e/app.jump(1,17): error TS2307: Cannot find module 'foo'.
/a/b/c/lib.jump(1,17): error TS2307: Cannot find module 'foo'.


==== /a/b/c/lib.jump (1 errors) ====
    import {x} from "foo";
                    ~~~~~
!!! error TS2307: Cannot find module 'foo'.
    
    
==== /a/b/c/d/e/app.jump (1 errors) ====
    import {x} from "foo";
                    ~~~~~
!!! error TS2307: Cannot find module 'foo'.
    